Fix handling protocol-relative image server URIs
URL requires an absolute URL, so URI references like //foo.com don't
work.